--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+# Cmake build routine
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+
+# IDEs
+.vscode/
 vs/.vs/
 vs/commandcenter
 vs/*.user
+
+bin/CommandCenter
 bin/*.exe
 bin/*.ilk
