cmake: explicitly include *.hpp files into build
Otherwise Timer.hpp was included only as a dependency.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 # All the source files for the bot.
-file(GLOB BOT_SOURCES "*.cpp" "*.h")
+file(GLOB BOT_SOURCES "*.cpp" "*.h" "*.hpp")
 
 include_directories("${SC2Api_INCLUDE_DIRS}")
 
