--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,16 @@ file(GLOB BOT_SOURCES "*.cpp" "*.h" "*.hpp")
 
 include_directories("${SC2Api_INCLUDE_DIRS}")
 
+# Show more warnings at compiletime.
+if (MSVC)
+    # FIXME: put Windows specific options here.
+else ()
+    set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+endif()
+
 if (APPLE)
     # Supress annoying 'deprecated' warnings caused by sc2api headers.
-    set(CMAKE_CXX_FLAGS "-Wno-deprecated")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated")
 endif ()
 
 # Create the executable.
