--- a/vs/CommandCenter.vcxproj.filters
+++ b/vs/CommandCenter.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClCompile Include="..\src\TechTree.cpp">
       <Filter>util</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\FiniteStateMachine.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\BaseLocationManager.h">
@@ -203,6 +206,16 @@
     <ClInclude Include="..\src\Behavior.h">
       <Filter>util</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\FiniteStateMachine.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="..\src\FocusFireFiniteStateMachine.cpp">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\FocusFireFiniteStateMachine.h">
+      <Filter>micro</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="global">
@@ -220,5 +233,8 @@
     <Filter Include="micro">
       <UniqueIdentifier>{9829f5c0-728d-4121-8884-bf1fddd88a87}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="CommandCenter.rc" />
   </ItemGroup>
 </Project>
