--- a/vs/CommandCenter.vcxproj
+++ b/vs/CommandCenter.vcxproj
@@ -316,6 +316,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Behavior.h" />
+    <ClInclude Include="..\src\BehaviorTreeBuilder.h" />
     <ClInclude Include="..\src\CCBot.h" />
     <ClInclude Include="..\src\BaseLocation.h" />
     <ClInclude Include="..\src\BaseLocationManager.h" />
