--- a/vs/CommandCenter.vcxproj.filters
+++ b/vs/CommandCenter.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClCompile Include="..\src\Unit.cpp">
       <Filter>util</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\UnitType.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\BaseLocationManager.h">
@@ -198,6 +201,9 @@
       <Filter>util</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Unit.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\UnitType.h">
       <Filter>util</Filter>
     </ClInclude>
   </ItemGroup>
