--- a/vs/CommandCenter_BWAPI.vcxproj.filters
+++ b/vs/CommandCenter_BWAPI.vcxproj.filters
@@ -1,23 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="common">
-      <UniqueIdentifier>{e29d85e3-7902-473c-a947-4b01507bbe12}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="global">
-      <UniqueIdentifier>{6dc7aecf-b878-4ae9-b14e-9a2203581419}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="macro">
-      <UniqueIdentifier>{3fab4941-f0c7-4255-b424-3b49e8be9952}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="util">
-      <UniqueIdentifier>{985c128e-6832-45cc-ac48-7912a3db9c13}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="micro">
-      <UniqueIdentifier>{94f3296f-532c-4408-b055-c833389fe7f2}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="..\src\BotAssert.cpp">
       <Filter>common</Filter>
     </ClCompile>
@@ -69,29 +52,6 @@
     <ClCompile Include="..\src\WorkerData.cpp">
       <Filter>macro</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\DistanceMap.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\JSONTools.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\TechTree.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\Unit.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\UnitData.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\UnitType.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\Util.cpp">
-      <Filter>util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\CCBot.cpp" />
-    <ClCompile Include="..\src\GameCommander.cpp" />
     <ClCompile Include="..\src\CombatCommander.cpp">
       <Filter>micro</Filter>
     </ClCompile>
@@ -116,7 +76,47 @@
     <ClCompile Include="..\src\SquadOrder.cpp">
       <Filter>micro</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\main_sc2api.cpp" />
+    <ClCompile Include="..\src\DistanceMap.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\JSONTools.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\TechTree.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Unit.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\UnitData.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\UnitType.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Util.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\CCBot.cpp" />
+    <ClCompile Include="..\src\GameCommander.cpp" />
+    <ClCompile Include="..\src\main_bwapi.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="common">
+      <UniqueIdentifier>{7f12d124-4be2-406b-9db6-0c2bd18bc6cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="global">
+      <UniqueIdentifier>{1f30c109-7b28-48fc-972e-e5d85f242e96}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="macro">
+      <UniqueIdentifier>{c60bb387-8e22-4605-8035-883e5742c911}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="micro">
+      <UniqueIdentifier>{68539b42-7776-4f72-a9ff-ac11239abe1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="util">
+      <UniqueIdentifier>{615ef66e-4eef-42da-a25c-e8a690a62ba6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\BotAssert.h">
@@ -173,6 +173,30 @@
     <ClInclude Include="..\src\WorkerData.h">
       <Filter>macro</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\CombatCommander.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\MeleeManager.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\MicroManager.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\RangedManager.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\ScoutManager.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Squad.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\SquadData.h">
+      <Filter>micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\SquadOrder.h">
+      <Filter>micro</Filter>
+    </ClInclude>
     <ClInclude Include="..\src\DistanceMap.h">
       <Filter>util</Filter>
     </ClInclude>
@@ -199,29 +223,5 @@
     </ClInclude>
     <ClInclude Include="..\src\CCBot.h" />
     <ClInclude Include="..\src\GameCommander.h" />
-    <ClInclude Include="..\src\CombatCommander.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\MeleeManager.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\MicroManager.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\RangedManager.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\ScoutManager.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\Squad.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\SquadData.h">
-      <Filter>micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\SquadOrder.h">
-      <Filter>micro</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
